src/objects/ErrorLog__c.object
<CustomObject>
    <description>Object to catch errors in SF.</description>
    <fields>
        <fullName>API_Method__c</fullName>
        <label>API Method</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <label>Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ErrorLocation__c</fullName>
        <label>Error Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ErrorMessage__c</fullName>
        <label>Error</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Error_Type__c</fullName>
        <label>Error Type</label>
        <picklist>
            <picklistValues>
                <fullName>Outbound Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inbound Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exception</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Batch Log</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FullStackTrace__c</fullName>
        <label>Error Stack Trace</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ObjectId__c</fullName>
        <label>Object ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; + ObjectId__c , &quot;Open&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Object</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Objects__c</fullName>
        <label>Objects</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Originator_IP_Address__c</fullName>
        <label>Originator IP Address</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parameters_Sent_Received__c</fullName>
        <label>Parameters Sent/Received</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Response_Supplied_Received__c</fullName>
        <label>Response Supplied/Received</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Response__c</fullName>
        <label>Response</label>
        <picklist>
            <picklistValues>
                <fullName>Success</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Session_ID__c</fullName>
        <label>Session ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Error_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Error Log</label>
    <listViews>
        <fullName>API_Logs</fullName>
        <columns>NAME</columns>
        <columns>Error_Type__c</columns>
        <columns>ErrorLocation__c</columns>
        <columns>Originator_IP_Address__c</columns>
        <columns>Parameters_Sent_Received__c</columns>
        <columns>Response__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ErrorLog__c.API_Logs</value>
        </filters>
        <filters>
            <field>Response__c</field>
            <operation>equals</operation>
            <value>Fail</value>
        </filters>
        <label>API Logs</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>API_Logs_Errors_Last_24_Hours</fullName>
        <columns>NAME</columns>
        <columns>Error_Type__c</columns>
        <columns>API_Method__c</columns>
        <columns>Code__c</columns>
        <columns>Parameters_Sent_Received__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Response_Supplied_Received__c</columns>
        <columns>Response__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ErrorLog__c.API_Logs</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:1</value>
        </filters>
        <filters>
            <field>Response__c</field>
            <operation>equals</operation>
            <value>Fail</value>
        </filters>
        <label>API Logs - Errors - Last 24 Hours</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>API_Logs_Errors_Last_24_Hours_GK</fullName>
        <columns>NAME</columns>
        <columns>Error_Type__c</columns>
        <columns>API_Method__c</columns>
        <columns>Code__c</columns>
        <columns>Parameters_Sent_Received__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Response_Supplied_Received__c</columns>
        <columns>Response__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ErrorLog__c.API_Logs</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:1</value>
        </filters>
        <filters>
            <field>Response__c</field>
            <operation>equals</operation>
            <value>Fail</value>
        </filters>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>equals</operation>
            <value>ginte</value>
        </filters>
        <label>API Logs - Errors - Last 24 Hours (GK)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>API_Logs_Errors_Last_24_Hours_WT</fullName>
        <columns>NAME</columns>
        <columns>Error_Type__c</columns>
        <columns>API_Method__c</columns>
        <columns>Code__c</columns>
        <columns>Parameters_Sent_Received__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Response_Supplied_Received__c</columns>
        <columns>Response__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ErrorLog__c.API_Logs</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:1</value>
        </filters>
        <filters>
            <field>Response__c</field>
            <operation>equals</operation>
            <value>Fail</value>
        </filters>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>equals</operation>
            <value>wtuser</value>
        </filters>
        <label>API Logs - Errors - Last 24 Hours (WT)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>API_Logs_Errors_Last_24_Hours_WT2</fullName>
        <columns>NAME</columns>
        <columns>Error_Type__c</columns>
        <columns>API_Method__c</columns>
        <columns>Code__c</columns>
        <columns>Parameters_Sent_Received__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Response_Supplied_Received__c</columns>
        <columns>FullStackTrace__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ErrorLog__c.API_Logs</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:1</value>
        </filters>
        <filters>
            <field>Response__c</field>
            <operation>equals</operation>
            <value>Fail</value>
        </filters>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>equals</operation>
            <value>wtuser</value>
        </filters>
        <filters>
            <field>ErrorMessage__c</field>
            <operation>notContain</operation>
            <value>Record Exists</value>
        </filters>
        <label>Errors - Last 24 Hours (WT) - Non Dup</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>API_Logs_Successes_Last_24_Hours</fullName>
        <columns>NAME</columns>
        <columns>Error_Type__c</columns>
        <columns>API_Method__c</columns>
        <columns>Originator_IP_Address__c</columns>
        <columns>Parameters_Sent_Received__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ErrorLog__c.API_Logs</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:1</value>
        </filters>
        <filters>
            <field>Response__c</field>
            <operation>equals</operation>
            <value>Success</value>
        </filters>
        <label>API Logs - Successes - Last 24 Hours</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>LAST_UPDATE</columns>
        <columns>ErrorMessage__c</columns>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>FullStackTrace__c</columns>
        <columns>Error_Type__c</columns>
        <columns>Response__c</columns>
        <columns>Response_Supplied_Received__c</columns>
        <columns>Parameters_Sent_Received__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>Log-{00000000}</displayFormat>
        <label>#</label>
        <type>AutoNumber</type>
    </nameField>
    <recordTypes>
        <fullName>API_Logs</fullName>
        <active>true</active>
        <description>API call record types</description>
        <label>API Logs</label>
    </recordTypes>
    <recordTypes>
        <fullName>Application_Error</fullName>
        <active>true</active>
        <description>Other Error Log Assigned to this recordtype</description>
        <label>Application Error</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>